# workspace_project_demo

./: Cargo.toml
docs/: instruction.txt
src/crates/common/: Cargo.toml
src/crates/common/src/: lib.rs
src/crates/helper/: Cargo.toml
src/crates/helper/src/: lib.rs
src/crates/service/: Cargo.toml
src/crates/service/src/: lib.rs
src/main/: Cargo.toml
src/main/src/: lib.rs  main.rs
