[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[[bin]]
name = "workspace_demo"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helper = { path = "../crates/helper" }
service = { path = "../crates/service" }